Switch CLI references to use snippets
 * Makes it much easier for generating and updating this information
   from other, automated processes

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -278,6 +278,7 @@ markdown_extensions:
 - pymdownx.magiclink
 - pymdownx.mark
 - pymdownx.smartsymbols
+- pymdownx.snippets
 - pymdownx.superfences
 - pymdownx.tasklist(custom_checkbox=true)
 - pymdownx.tilde
