Add some documentation around update.vm_strategy

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ pages:
       - Links: links.md
       - Manually Configuring Links: links-manual.md
     - Running Errands: errands.md
+    - VM Update Strategy: changing-deployment-vm-strategy.md
     - VM Anti-Affinity: vm-anti-affinity.md
     - Troubleshooting:
       - Monitoring: monitoring.md
