Update CPI V2 contract docs
- adds create/delete network details
- updated examples

[#158804777](https://www.pivotaltracker.com/story/show/158804777)

Signed-off-by: Dale Wick <dwick@pivotal.io>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -156,17 +156,19 @@ pages:
   - Director Runtime Config: runtime-config.md
   - Generic Configs: configs.md
   - Cloud Provider Interface:
-    - Overview: cpi-api-v1.md
+    - V1 Overview: cpi-api-v1.md
     - RPC Interface: cpi-api-v1-rpc.md
-    - Methods:
+    - V1 Methods:
       - attach_disk: cpi-api-v1-method/attach-disk.md
       - calculate_vm_cloud_properties: cpi-api-v1-method/calculate-vm-cloud-properties.md
       - configure_networks: cpi-api-v1-method/configure-networks.md
       - create_disk: cpi-api-v1-method/create-disk.md
+      - create_network: cpi-api-v1-method/create-network.md
       - create_stemcell: cpi-api-v1-method/create-stemcell.md
       - create_vm: cpi-api-v1-method/create-vm.md
       - current_vm_id: cpi-api-v1-method/current-vm-id.md
       - delete_disk: cpi-api-v1-method/delete-disk.md
+      - delete_network: cpi-api-v1-method/delete-network.md
       - delete_snapshot: cpi-api-v1-method/delete-snapshot.md
       - delete_stemcell: cpi-api-v1-method/delete-stemcell.md
       - delete_vm: cpi-api-v1-method/delete-vm.md
@@ -180,6 +182,13 @@ pages:
       - set_disk_metadata: cpi-api-v1-method/set-disk-metadata.md
       - set_vm_metadata: cpi-api-v1-method/set-vm-metadata.md
       - snapshot_disk: cpi-api-v1-method/snapshot-disk.md
+    - CPI V2: cpi-api-v2.md
+    - V2 Methods:
+      - attach_disk: cpi-api-v2-method/attach-disk.md
+      - create_vm: cpi-api-v2-method/create-vm.md
+      - delete_vm: cpi-api-v2-method/delete-vm.md
+      - detach_disk: cpi-api-v2-method/detach-disk.md
+      - info: cpi-api-v2-method/info.md
   - Release Management:
     - Overview: release.md
     - Release URLs: release-urls.md
