Revert "Remove OpenStack anti-affinity docs"
This reverts commit eb87a728fad1c144f70d08a690cbbd814bd2af84.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,7 @@ pages:
       - Manually Configuring Links: links-manual.md
     - Running Errands: errands.md
     - VM Update Strategy: changing-deployment-vm-strategy.md
+    - VM Anti-Affinity: vm-anti-affinity.md
     - Troubleshooting:
       - Monitoring: monitoring.md
       - Process Monitoring with Monit: vm-monit.md
