--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -166,11 +166,13 @@ pages:
         - configure_networks: cpi-api-v1-method/configure-networks.md
         - create_disk: cpi-api-v1-method/create-disk.md
         - create_stemcell: cpi-api-v1-method/create-stemcell.md
+        - create_network: cpi-api-v1-method/create-network.md
         - create_vm: cpi-api-v1-method/create-vm.md
         - current_vm_id: cpi-api-v1-method/current-vm-id.md
         - delete_disk: cpi-api-v1-method/delete-disk.md
         - delete_snapshot: cpi-api-v1-method/delete-snapshot.md
         - delete_stemcell: cpi-api-v1-method/delete-stemcell.md
+        - delete_network: cpi-api-v1-method/delete-network.md
         - delete_vm: cpi-api-v1-method/delete-vm.md
         - detach_disk: cpi-api-v1-method/detach-disk.md
         - get_disks: cpi-api-v1-method/get-disks.md
