Add documentation about deployment flag and agent settings
Also note about it being a beta feature.

[finishes #162514755](https://www.pivotaltracker.com/story/show/162514755)

Co-authored-by: Joshua Aresty <joshua.aresty@emc.com>
Co-authored-by: Max Petersen <mpetersen@pivotal.io>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,7 +42,7 @@ pages:
     - Running Errands: errands.md
     - VM Update Strategy: changing-deployment-vm-strategy.md
     - VM Anti-Affinity: vm-anti-affinity.md
-    - Credentials on tmpfs: job-tmpfs.md
+    - Credentials on tmpfs: creds-tmpfs.md
     - Troubleshooting:
       - Monitoring: monitoring.md
       - Process Monitoring with Monit: vm-monit.md
