Add `managed networks` documentation
[161022499](https://www.pivotaltracker.com/story/show/161022499)

Signed-off-by: Miguel Verissimo <mverissimo@pivotal.io>
Co-authored-by: Miguel Verissimo <mverissimo@pivotal.io>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -153,6 +153,7 @@ pages:
     - Usage: cloud-config.md
     - Availability Zones: azs.md
     - Networks: networks.md
+    - Managed Networks: managed-networks.md
   - Director APIs:
     - Director HTTP API: director-api-v1.md
     - Links API: links-api.md
