--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ pages:
     - VM Update Strategy: changing-deployment-vm-strategy.md
     - VM Anti-Affinity: vm-anti-affinity.md
     - Credentials on tmpfs: creds-tmpfs.md
+    - Locking compiled releases: locking-compiled-releases.md
     - Troubleshooting:
       - Monitoring: monitoring.md
       - Process Monitoring with Monit: vm-monit.md
