--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -208,6 +208,7 @@ pages:
         - Pre-start: pre-start.md
         - Post-start: post-start.md
         - Post-deploy: post-deploy.md
+        - Pre-stop: pre-stop.md
         - Post-stop: post-stop.md
     - Links:
       - Common Types: links-common-types.md
