Add documentation guides for rotating mbus and blobstore
* Documentation guide for rotating mbus boostrap password
* Documentation guide for rotating blobstore agent password

[#160988099](https://www.pivotaltracker.com/story/show/160988099)

Co-authored-by: Denis Langer <denis.langer@sap.com>
Co-authored-by: David Ansari <david.ansari@sap.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,6 +95,8 @@ pages:
       - Rotating Credentials:
         - NATS CA Rotation: nats-ca-rotation.md
         - TLS Blobstore CA Rotation: blobstore-ca-rotation.md
+        - mbus Password Rotation: mbus-password-rotation.md
+        - Blobstore Agent Password Rotation: blobstore-agent-password-rotation.md
     - Configuring the Database:
       - Builtin PostgreSQL: director-configure-db.md
       - External MySQL: director-configure-db.md
