Added mbus SSL certificate rotation guide
* Changed structure of the documentation guide as preparation for a PR,
e.g. getting feedback from SF/Toronto teams

Co-authored-by: Denis Langer <denis.langer@sap.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,10 +93,18 @@ pages:
       - Configuring SSL Certificates: director-certs.md
       - Director SSL Certificate Configuration with OpenSSL: director-certs-openssl.md
       - Rotating Credentials:
-        - NATS CA Rotation: nats-ca-rotation.md
-        - TLS Blobstore CA Rotation: blobstore-ca-rotation.md
-        - mbus Password Rotation: mbus-password-rotation.md
-        - Blobstore Agent Password Rotation: blobstore-agent-password-rotation.md
+        - Director:
+          - Default CA Rotation: default-ca-rotation.md
+        - NATS:
+          - CA Rotation: nats-ca-rotation.md
+          - Password Rotation: nats-password-rotation.md
+        - Blobstore:
+          - CA Rotation: blobstore-ca-rotation.md
+          - Director Password Rotation: blobstore-director-password-rotation.md
+          - Agent Password Rotation: blobstore-agent-password-rotation.md
+        - Bootstrap mbus:
+          - Password Rotation: mbus-password-rotation.md
+          - SSL Rotation: mbus-ssl-rotation.md
     - Configuring the Database:
       - Builtin PostgreSQL: director-configure-db.md
       - External MySQL: director-configure-db.md
