--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,17 +93,13 @@ pages:
       - Configuring SSL Certificates: director-certs.md
       - Director SSL Certificate Configuration with OpenSSL: director-certs-openssl.md
       - Rotating Credentials:
-        - Director:
-          - Default CA Rotation: default-ca-rotation.md
+        - Credentials: credential-rotation.md
         - NATS:
           - CA Rotation: nats-ca-rotation.md
-          - Password Rotation: nats-password-rotation.md
         - Blobstore:
           - CA Rotation: blobstore-ca-rotation.md
-          - Director Password Rotation: blobstore-director-password-rotation.md
           - Agent Password Rotation: blobstore-agent-password-rotation.md
         - Bootstrap mbus:
-          - Password Rotation: mbus-password-rotation.md
           - SSL Rotation: mbus-ssl-rotation.md
     - Configuring the Database:
       - Builtin PostgreSQL: director-configure-db.md
