--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -212,6 +212,7 @@ pages:
         - Post-stop: post-stop.md
     - Links:
       - Common Types: links-common-types.md
+    - Deployment Convergence: deployment-convergence.md
   - Operating Systems:
     - Ubuntu: ubuntu-os.md
     - Windows Server: windows-os.md
