--- a/ci/tasks/commit-docroot.yml
+++ b/ci/tasks/commit-docroot.yml
@@ -2,7 +2,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: bosh/main
+    repository: alpine/git
 run:
   path: /bin/sh
   args:
