--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -265,6 +265,7 @@ pages:
     - Overview: openstack.md
     - Usage: openstack-cpi.md
     - Common Errors: openstack-cpi-errors.md
+    - Using VRRP: openstack-vrrp.md
     - Using Human-readable VM names: openstack-human-readable-vm-names.md
     - Using Keystone API v2: openstack-keystonev2.md
     - Using Light Stemcells: openstack-light-stemcells.md
