Add documentation about prometheus metrics server
This feature is still a work in progress, so there is a disclaimer at
the top of the documentation page.

[#169787257](https://www.pivotaltracker.com/story/show/169787257)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,6 +83,7 @@ pages:
       - Undefined Behaviors: bpm/undefined.md
   - Operating Director:
     - Monitoring:
+      - Prometheus Metrics: director-metrics.md
       - Auditing Events: events.md
       - Reviewing Tasks: director-tasks.md
       - Logging API Access: director-access-events.md
