Guidance to migrate packages to Jammy stemcells
Signed-off-by: Brian Cunnie <bcunnie@vmware.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,6 +64,7 @@ pages:
     - Working with Blobs: release-blobs.md
     - Testing:
       - Unit Testing Job Templates: job-templates.md
+    - Migrating Packages to Jammy Jellyfish: jammy-migration.md
     - Scheduled Processes: scheduled-procs.md
     - Creating Compiled Releases: compiled-releases.md
     - Using Errands: errands.md
