--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -176,42 +176,42 @@ pages:
   - Director Runtime Config: runtime-config.md
   - Generic Configs: configs.md
   - Cloud Provider Interface:
-    - Version 1:
-      - Overview: cpi-api-v1.md
-      - Methods:
-        - attach_disk: cpi-api-v1-method/attach-disk.md
-        - calculate_vm_cloud_properties: cpi-api-v1-method/calculate-vm-cloud-properties.md
-        - configure_networks: cpi-api-v1-method/configure-networks.md
-        - create_disk: cpi-api-v1-method/create-disk.md
-        - create_stemcell: cpi-api-v1-method/create-stemcell.md
-        - create_network: cpi-api-v1-method/create-network.md
-        - create_vm: cpi-api-v1-method/create-vm.md
-        - current_vm_id: cpi-api-v1-method/current-vm-id.md
-        - delete_disk: cpi-api-v1-method/delete-disk.md
-        - delete_snapshot: cpi-api-v1-method/delete-snapshot.md
-        - delete_stemcell: cpi-api-v1-method/delete-stemcell.md
-        - delete_network: cpi-api-v1-method/delete-network.md
-        - delete_vm: cpi-api-v1-method/delete-vm.md
-        - detach_disk: cpi-api-v1-method/detach-disk.md
-        - get_disks: cpi-api-v1-method/get-disks.md
-        - has_disk: cpi-api-v1-method/has-disk.md
-        - has_vm: cpi-api-v1-method/has-vm.md
-        - info: cpi-api-v1-method/info.md
-        - reboot_vm: cpi-api-v1-method/reboot-vm.md
-        - resize_disk: cpi-api-v1-method/resize-disk.md
-        - set_disk_metadata: cpi-api-v1-method/set-disk-metadata.md
-        - set_vm_metadata: cpi-api-v1-method/set-vm-metadata.md
-        - snapshot_disk: cpi-api-v1-method/snapshot-disk.md
     - Version 2:
       - Overview: cpi-api-v2.md
       - Methods:
         - attach_disk: cpi-api-v2-method/attach-disk.md
+        - calculate_vm_cloud_properties: cpi-api-v2-method/calculate-vm-cloud-properties.md
+        - create_disk: cpi-api-v2-method/create-disk.md
+        - create_stemcell: cpi-api-v2-method/create-stemcell.md
+        - create_network: cpi-api-v2-method/create-network.md
         - create_vm: cpi-api-v2-method/create-vm.md
+        - delete_disk: cpi-api-v2-method/delete-disk.md
+        - delete_snapshot: cpi-api-v2-method/delete-snapshot.md
+        - delete_stemcell: cpi-api-v2-method/delete-stemcell.md
+        - delete_network: cpi-api-v2-method/delete-network.md
         - delete_vm: cpi-api-v2-method/delete-vm.md
         - detach_disk: cpi-api-v2-method/detach-disk.md
+        - get_disks: cpi-api-v2-method/get-disks.md
+        - has_disk: cpi-api-v2-method/has-disk.md
+        - has_vm: cpi-api-v2-method/has-vm.md
         - info: cpi-api-v2-method/info.md
-      - Migrating from version 1: v2-migration-guide.md
-    - RPC Interface: cpi-api-v1-rpc.md
+        - reboot_vm: cpi-api-v2-method/reboot-vm.md
+        - resize_disk: cpi-api-v2-method/resize-disk.md
+        - set_disk_metadata: cpi-api-v2-method/set-disk-metadata.md
+        - set_vm_metadata: cpi-api-v2-method/set-vm-metadata.md
+        - snapshot_disk: cpi-api-v2-method/snapshot-disk.md
+    - Version 1:
+      - Overview: cpi-api-v1.md
+      - Migrating to version 2: cpi-api-v2-migration-guide.md
+      - Methods:
+        - attach_disk: cpi-api-v1-method/attach-disk.md
+        - configure_networks: cpi-api-v1-method/configure-networks.md
+        - create_vm: cpi-api-v1-method/create-vm.md
+        - current_vm_id: cpi-api-v1-method/current-vm-id.md
+        - delete_vm: cpi-api-v1-method/delete-vm.md
+        - detach_disk: cpi-api-v1-method/detach-disk.md
+        - info: cpi-api-v1-method/info.md
+    - RPC Interface: cpi-api-rpc.md
   - Release Management:
     - Overview: release.md
     - Release URLs: release-urls.md
