Document `create-recovery-plan` and `recover` commands
[#185483613, #185483615]

Authored-by: Chris Selzo <cselzo@vmware.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,7 @@ pages:
       - Monitoring: monitoring.md
       - Process Monitoring with Monit: vm-monit.md
       - IaaS Reconciliation: cck.md
+      - Deployment Recovery: recover.md
     - Migrating:
       - To Availability Zones: migrated-from.md
       - From the Ruby CLI: cli-v2-diff.md
