--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -126,6 +126,7 @@ pages:
       - Common Addons: addons-common.md
     - Integrating with CredHub:
       - Variable Types: variable-types.md
+    - Tasks Cleanup: scheduled-task-cleanup.md
     - Optional Features:
       - Explicit ARP Flushing: flush-arp.md
       - Removing Dev Tools from VMs: remove-dev-tools.md
